--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
 	<head>
-		<tittle>Prueba_diseno_Web/tittle>
+		<tittle>Prueba_diseno_Web</tittle>
 	</head>
 	<body>
 		<h1> Hola soy una prueba</h1>
